# environmental-sensors

./: Dockerfile  README.md  airflow.cfg  api.py  config.json  docker-compose.yml  extract.py  hello.py  influx.py  launch.py  pyproject.toml  requirements.txt  schedule.py
dags/: Dockerfile.txt  agg.py  airflow-runner.sh  api.py  data_reduced.csv  extract.py  schedule_1.py
