[project]
name = "etlbasics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "parquet>=1.3.1",
    "psycopg2>=2.9.10",
    "flask>=3.1.0",
    "polars>=1.24.0",
    "prefect>=3.2.11",
    "google-cloud-bigquery>=3.30.0",
    "pandas>=2.2.3",
    "pymongo[srv]>=4.11.3",
    "fastapi>=0.115.11",
    "duckdb>=1.2.1",
    "influxdb3-python>=0.11.0",
    "sqlalchemy>=2.0.38",
]
