[project]
name = "DataEngineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "prefect>=3.2.11",
    "pandas>=2.2.3",
    "pymongo[srv]>=4.11.3",
    "pip>=25.0.1",
]

[tool.uv.workspace]
members = ["DataEngineering"]
